kubernetes/production/resources/docker.registry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-docker-registry-ingress
  labels:
    app.kubernetes.io/name: docker-registry-ingress
    app.kubernetes.io/instance: my-docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  rules:
    - host: docker.registry.lan
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-docker-registry
                port:
                  number: 5000
  tls:
    - hosts:
        - docker.registry.lan
      secretName: docker.registry.lan-tls
